--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
     "stripe": "^14.18.0",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
